# Rasterizer

./: CMakeLists.txt  LICENSE  Makefile  README.md  project1F
include/: Camera.h  Matrix.h  TriangleScreen.h  reader.h
src/: Camera.cxx  Matrix.cxx  main.cxx  reader.cxx
